# onbelay

./: pyproject.toml
agent-harness/: .gitignore  README.md  pyproject.toml
agent-harness/docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
agent-harness/docs/design/: ARCHITECTURE_ENHANCEMENT_PROGRESS.md  BACKEND_SUBSYSTEMS.md  ENHANCED_ARCHITECTURE_V2.md  ENHANCED_SPECIFICATION_SYSTEM.md  IMPLEMENTATION_PLAN.md  INTER_AGENT_COMMUNICATION.md  MULTI_AGENT_ORCHESTRATION.md  SYSTEM_DESIGN_PATCH.md
agent-harness/src/agent_harness/: __init__.py  agent.py  baseline.py  checkpoint.py  cli.py  config.py  console.py  context_manager.py  costs.py  exceptions.py  features.py  file_sizes.py  git_ops.py  github_sync.py  health.py  init.py  lint.py  logging.py  migrations.py  orientation.py  output_parser.py  preflight.py  progress.py  progress_monitor.py  scanner.py  session.py  state.py  test_runner.py  verification.py  version.py
agent-harness/tests/: __init__.py  conftest.py  test_agent.py  test_baseline.py  test_checkpoint.py  test_cli.py  test_config.py  test_context_manager.py  test_costs.py  test_features.py  test_file_sizes.py  test_git_ops.py  test_github_sync.py  test_health.py  test_init.py  test_lint.py  test_logging.py  test_mcp.py  test_migrations.py  test_orientation.py  test_output_parser.py  test_preflight.py  test_progress.py  test_progress_monitor.py  test_prompts.py  test_scanner.py  test_session.py  test_state.py  test_test_runner.py  test_tools.py  test_verification.py
agent-harness/tests/integration/: README.md  __init__.py  conftest.py  test_cli_integration.py  (+3 more)
(+15 files in other folders)
